--- a/styles/main.css
+++ b/styles/main.css
@@ -5,25 +5,21 @@ body{
     background-color: #81D8D0;
 }
 body::-webkit-scrollbar {
-    width: 7px;
+    width: 8px;
 }
 body::-webkit-scrollbar-button {
-    background: transparent;
-    border-radius: 4px;
-    height: 5px;
-}
-body::-webkit-scrollbar-track-piece {
-    background: #bbbbbb;
-    border-radius: 4px;
+    height: 0;
 }
 body::-webkit-scrollbar-thumb {
     border-radius: 4px;
     background-color: rgba(0, 0, 0, 0.4);
-    border: 1px solid slategrey;
 }
 body::-webkit-scrollbar-track {
-    box-shadow: #bbbbbb;
+    box-shadow: #ddd;
     border-radius: 4px;
+}
+body::-webkit-scrollbar-track-piece {
+    background: #ddd;
 }
 
 /*header*/
