--- a/styles/projects.css
+++ b/styles/projects.css
@@ -15,10 +15,10 @@
     box-sizing: border-box;
 }
 #projectc{
-    overflow: hidden;
+    overflow: visible;
     min-height: 100px;
-    margin: 1% 5vw;
-    padding: 2%;
+    margin: 1% 5vw 5vh;
+    padding: 0;
     display: grid;
     grid-template-columns: 1fr;
     gap: 5px;
@@ -30,7 +30,7 @@
 .problock{
     height: fit-content;
     background-color: rgba(255, 255, 255, 0.75);
-    margin: 1.3% 2%;
+    margin: 1.3% 0.5%;
     padding: 4%;
     display: inline-flex;
     flex-direction: row;
@@ -38,7 +38,7 @@
     align-items: center;
     border-radius: 15px;
     cursor: pointer;
-    overflow: hidden;
+    overflow: visible;
     transform:scale(1,1);
     transition: all 0.5s ease-out;
     color: #000000;
@@ -48,7 +48,7 @@
 .problock:hover{
     transform:scale(1.03,1.03);
     background-color: rgba(255, 255, 255, 0.5);
-    color: #777777;
+    color: #595959;
     box-shadow: 0 10px 10px -5px;
 }
 .proimage{
@@ -90,6 +90,7 @@
 }
 .probrief{
     font-size: 20px;
+    text-align: justify;
 }
 
 @media only screen and (max-width: 768px){
